cmake_minimum_required(VERSION 3.12)
project(tic3001_assignments_ay2021_s2_team_09)

set(CMAKE_CXX_STANDARD 14)

add_executable(tic3001_assignments_ay2021_s2_team_09
    "Abstract Data Type/out/production/Abstract Data Type/main/java/AlphabeticShift.class"
    "Abstract Data Type/out/production/Abstract Data Type/main/java/Characters.class"
    "Abstract Data Type/out/production/Abstract Data Type/main/java/CircularShift.class"
    "Abstract Data Type/out/production/Abstract Data Type/main/java/Input.class"
    "Abstract Data Type/out/production/Abstract Data Type/main/java/MasterControl.class"
    "Abstract Data Type/out/production/Abstract Data Type/main/java/Output.class"
    "Abstract Data Type/out/production/Abstract Data Type/input.txt"
    "Abstract Data Type/src/main/java/AlphabeticShift.java"
    "Abstract Data Type/src/main/java/Characters.java"
    "Abstract Data Type/src/main/java/CircularShift.java"
    "Abstract Data Type/src/main/java/Input.java"
    "Abstract Data Type/src/main/java/MasterControl.java"
    "Abstract Data Type/src/main/java/Output.java"
    "Abstract Data Type/Abstract Data Type.iml"
    "Main and Subroutine/out/production/Main and Subroutine/main/Alphabetizer.class"
    "Main and Subroutine/out/production/Main and Subroutine/main/CircularShift.class"
    "Main and Subroutine/out/production/Main and Subroutine/main/Input.class"
    "Main and Subroutine/out/production/Main and Subroutine/main/MasterControl.class"
    "Main and Subroutine/out/production/Main and Subroutine/main/Output.class"
    "Main and Subroutine/src/main/Alphabetizer.java"
    "Main and Subroutine/src/main/CircularShift.java"
    "Main and Subroutine/src/main/Input.java"
    "Main and Subroutine/src/main/MasterControl.java"
    "Main and Subroutine/src/main/Output.java"
    "Main and Subroutine/Main and Subroutine.iml"
    "Test case/Test case 1/Input1.txt"
    "Test case/Test case 1/Output1.txt"
    "Test case/Test case 2/Input2.txt"
    "Test case/Test case 2/Output2.txt"
    "Test case/Test case 3/Input3.txt"
    "Test case/Test case 3/Output3.txt"
    README.md)
